Added compose file

--- a/configs/steno.conf
+++ b/configs/steno.conf
@@ -1,11 +1,11 @@
 {
   "Threads": [
-    { "PacketsDirectory": "/data/ens3f1/pcap" , "IndexDirectory": "/data/ens3f1/index" , "MaxDirectoryFiles": 30000 , "DiskFreePercentage": 10 }
+    { "PacketsDirectory": "/data/ens33/pcap" , "IndexDirectory": "/data/ens33/index" , "MaxDirectoryFiles": 30000 , "DiskFreePercentage": 10 }
   ]
   , "StenotypePath": "/usr/bin/stenotype"
-  , "Interface": "ens3f1"
-  , "Port": 1234
+  , "Interface": "ens33"
+  , "Port": 9005
   , "Host": "127.0.0.1"
-  , "Flags": []
+  , "Flags": ["--uid=root", "--gid=root", "--seccomp=none"]
   , "CertPath": "/etc/stenographer/certs"
 }
